--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  /* .rails-default-error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -16,9 +16,9 @@
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
-  }
+  } */
 
-  .rails-default-error-page div.dialog > div {
+  /* .rails-default-error-page div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -29,15 +29,15 @@
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+  } */
 
-  .rails-default-error-page h1 {
+  /* .rails-default-error-page h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
-  }
+  } */
 
-  .rails-default-error-page div.dialog > p {
+  /* .rails-default-error-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -50,18 +50,60 @@
     border-top-color: #DADADA;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  } */
+  .img {
+    position: relative;
+    width: 100%;
+    height: 100%;
   }
+
+  .text {
+    position: absolute;
+    top: 82px;
+    color: white;
+    padding: 2rem;
+    text-align: center;
+  }
+
+  .text h1 {
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .text p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.25rem;
+}
+
+  .text a {
+  background-image: linear-gradient(to right, #115540 0%, #237A57  51%, #115540  100%);
+  // margin-top: 10px;
+  padding: 10px 20px;
+  text-align: center;
+  // transition: 0.5s;
+  // background-size: 100% auto;
+  color: white;
+  box-shadow: 0 0 20px rgba(238, 238, 238, 0);
+  border-radius: 10px;
+  display: block;
+  border:none;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  }
+
   </style>
 </head>
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <div>
+    <img src="assets/error-img.png" alt="My image">
+    <div class="text">
       <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <p>The page may have moved</p>
+      <a href="http://www.eco-coach.me">Go back to EcoCoach</a>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
