--- a/public/500.html
+++ b/public/500.html
@@ -4,7 +4,7 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  /* .rails-default-error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -50,6 +50,47 @@
     border-top-color: #DADADA;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  } */
+
+  .img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .text {
+    position: absolute;
+    top: 82px;
+    color: white;
+    padding: 2rem;
+    text-align: center;
+  }
+
+  .text h1 {
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .text p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.25rem;
+}
+
+  .text a {
+  background-image: linear-gradient(to right, #115540 0%, #237A57  51%, #115540  100%);
+  // margin-top: 10px;
+  padding: 10px 20px;
+  text-align: center;
+  // transition: 0.5s;
+  // background-size: 100% auto;
+  color: white;
+  box-shadow: 0 0 20px rgba(238, 238, 238, 0);
+  border-radius: 10px;
+  display: block;
+  border:none;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
   }
   </style>
 </head>
@@ -57,10 +98,11 @@
 <body class="rails-default-error-page">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <div>
+    <img src="assets/error-img.png" alt="My image">
+    <div class="text">
       <h1>We're sorry, but something went wrong.</h1>
+      <a href="http://www.eco-coach.me">Go back to EcoCoach</a>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
