--- a/public/404.html
+++ b/public/404.html
@@ -52,9 +52,11 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   } */
   body {
-    background-image: url('assets/error-img.png');
-    background-size: cover;
     margin: 0;
+  }
+
+  img {
+    width: 100%
   }
 
   .text {
@@ -97,6 +99,7 @@
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
+  <img src="images/error-img.png" alt="500">
   <div class="text">
     <h1>Sorry, the page you were looking for doesn't exist.</h1>
     <p>The page may have moved</p>
