--- a/public/404.html
+++ b/public/404.html
@@ -97,7 +97,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/404.html -->
   <img src="images/error-img.png" alt="500">
   <div class="text">
