--- a/public/500.html
+++ b/public/500.html
@@ -98,7 +98,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
   <img src="images/error-img.png" alt="500">
   <div class="text">
