accordeon + buttons modal change text

--- a/public/404.html
+++ b/public/404.html
@@ -103,7 +103,7 @@
   <div class="text">
     <h1>Sorry, the page you were looking for doesn't exist.</h1>
     <p>The page may have moved</p>
-    <a href="http://www.eco-coach.me">Go back to EcoCoach</a>
+    <a href="https://www.eco-coach.me">Go back to EcoCoach</a>
   </div>
   </div>
 </body>
