--- a/public/500.html
+++ b/public/500.html
@@ -103,7 +103,7 @@
   <img src="images/error-img.png" alt="500">
   <div class="text">
     <h1>We're sorry, but something went wrong.</h1>
-    <a href="http://www.eco-coach.me">Go back to EcoCoach</a>
+    <a href="https://www.eco-coach.me">Go back to EcoCoach</a>
   </div>
 </body>
 </html>
